--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,30 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
 #    url: jdbc:mysql://127.0.0.1:3306/test
 #    driver-class-name: com.mysql.cj.jdbc.Driver
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
+
+
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: credit_redis
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 500
+        min-idle: 0
+    lettuce:
+      shutdown-timeout: 0
+
+
+
 
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   type-aliases-package: com.example.*
   configuration:
     map-underscore-to-camel-case: true
-
-
